--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -76,3 +76,39 @@ header {
 #links-footer  a{
  border-bottom: 1px solid var(--color-green);
 }
+
+/*=== CARDS ===*/
+
+.cards {
+  max-width: 800px;
+  margin: 0 auto;
+  display: grid ;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.card {
+  background-color: var(--color-green);
+}
+
+.card-image-container img{
+  width: 100%;
+
+}
+
+.card-content, .card-info {
+  padding: 18px;
+}
+
+.card-info{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.tecnology {
+  background-color: var(--color-green);
+  filter: brightness(90%);
+  padding: 5px 20px;
+  border-radius: 20px;
+  text-align: center;
+}
