--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
 
 :root {
-  --color-green: #00d871;
+  --color-wine: #c72c41;
 }
 * {
   margin: 0;
@@ -10,7 +10,7 @@
 }
 
 body {
-  background: #282a36;
+  background: #2d132c;
   font-family: "Open Sans", sans-serif;
   color: white;
   height: 1000px;
@@ -19,7 +19,7 @@ body {
 
 header {
   padding: 32px;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid #801336;
   background: rgba(0, 0, 0, 0.1);
 }
 
@@ -37,7 +37,7 @@ header {
 }
 
 .links a:hover {
-  color: var(--color-green);
+  color: var(--color-wine);
   transition: color 500ms;
 }
 
@@ -48,7 +48,7 @@ header {
 
 #wrapper img {
   border-radius: 175px 20px;
-  border: 3px solid var(--color-green);
+  border: 3px solid var(--color-wine);
   margin-bottom: 32px;
   height: 350px;
 }
@@ -74,7 +74,7 @@ header {
 }
 
 #links-footer  a{
- border-bottom: 1px solid var(--color-green);
+ border-bottom: 1px solid var(--color-wine);
 }
 
 /*=== CARDS ===*/
@@ -83,12 +83,12 @@ header {
   max-width: 800px;
   margin: 0 auto;
   display: grid ;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 20px;
 }
 
 .card {
-  background-color: var(--color-green);
+  background-color: var(--color-wine);
 }
 
 .card-image-container img{
@@ -106,7 +106,7 @@ header {
 }
 
 .tecnology {
-  background-color: var(--color-green);
+  background-color: var(--color-wine);
   filter: brightness(90%);
   padding: 5px 20px;
   border-radius: 20px;
