fix: alterando cor de fundo

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background: #2d132c;
+  background: #1b071b;
   font-family: "Open Sans", sans-serif;
   color: white;
   height: 1000px;
